--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,9 @@ name = "fluidspaces"
 version = "0.4.0"
 authors = ["Peter Henry <me@peterhenry.net>"]
 
-[[bin]]
-name = "fluidspaces"
-doc = false
+# [[bin]]
+# name = "fluidspaces"
+# doc = false
 
 [dependencies]
 clap = "2.29.0"
