--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,8 @@ authors = ["Peter Henry <me@peterhenry.net>"]
 [dependencies]
 clap = "2.29.0"
 unicode-segmentation = "1.2.0"
-nom = "3.2.1"
+# nom = "3.2.1"
+nom = "4.1.1"
 failure = "0.1.1"
 
 [dependencies.i3ipc]
